Henon Mira Juliab Mandel en Wolk toegevoegd

--- a/fractals.lpi
+++ b/fractals.lpi
@@ -111,6 +111,13 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit>
+      <Unit>
+        <Filename Value="invoer.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="frmInvoer"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
